<package>
    <name>imu_utils</name>
    <version>1.0.0</version>
    <description>The imu_utils package</description>
    <maintainer email="gaowenliang@todo.todo">gaowenliang</maintainer>
    <license>MIT</license>
    <author>gaowenliang</author>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake -->

    <!--  <build_depend>roscpp</build_depend>-->
    <!--  <build_depend>std_msgs</build_depend>-->
    <build_depend>rosbag</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <!--  <run_depend>roscpp</run_depend>-->
    <!--  <run_depend>std_msgs</run_depend>-->
    <run_depend>rosbag</run_depend>

</package>